@@ -59,6 +59,8 @@ import org.pmiops.workbench.model.ParticipantDemographics;
 import org.pmiops.workbench.model.SurveyModule;
 import org.pmiops.workbench.model.SurveyVersion;
 import org.pmiops.workbench.model.Variant;
+import org.pmiops.workbench.model.VariantFilter;
+import org.pmiops.workbench.model.VariantFilterInfoResponse;
 import org.pmiops.workbench.model.VariantFilterRequest;
 import org.pmiops.workbench.model.VariantFilterResponse;
 import org.pmiops.workbench.utils.FieldValues;
@@ -177,7 +179,7 @@ public class CohortBuilderServiceImpl implements CohortBuilderService {
               .findCriteriaByDomainIdAndStandardAndConceptIds(domainId, false, sourceIds)
               .stream()
               .map(cohortBuilderMapper::dbModelToClient)
-              .collect(Collectors.toList()));
+              .toList());
     }
     if (!standardConceptIds.isEmpty()) {
       criteriaList.addAll(
@@ -185,7 +187,7 @@ public class CohortBuilderServiceImpl implements CohortBuilderService {
               .findCriteriaByDomainIdAndStandardAndConceptIds(domainId, true, standardIds)
               .stream()
               .map(cohortBuilderMapper::dbModelToClient)
-              .collect(Collectors.toList()));
+              .toList());
     }
     return criteriaList;
   }
@@ -419,8 +421,7 @@ public class CohortBuilderServiceImpl implements CohortBuilderService {
             .collect(Collectors.toList());
 
     // filter strDomains to remove domains that have a cardCount by domain
-    domainNames.removeAll(
-        cardCounts.stream().map(DbCardCount::getDomainId).collect(Collectors.toList()));
+    domainNames.removeAll(cardCounts.stream().map(DbCardCount::getDomainId).toList());
 
     cardCounts.addAll(cbCriteriaDao.findDomainCounts(searchTerm, standard, domainNames));
 
@@ -632,6 +633,17 @@ public class CohortBuilderServiceImpl implements CohortBuilderService {
   }
 
   @Override
+  public VariantFilterInfoResponse findVariantFilterInfo(VariantFilter filter) {
+    TableResult result =
+        bigQueryService.filterBigQueryConfigAndExecuteQuery(
+            VariantQueryBuilder.buildFilterInfoQuery(filter));
+    return StreamSupport.stream(result.iterateAll().spliterator(), false)
+        .map(row -> convertToVariantFilterInfoResponse(row))
+        .findFirst()
+        .get();
+  }
+
+  @Override
   public List<Criteria> findCriteriaByConceptIdsOrConceptCodes(List<String> conceptKeys) {
     List<String> searchDomains =
         ImmutableList.of(
@@ -653,6 +665,24 @@ public class CohortBuilderServiceImpl implements CohortBuilderService {
     return dbCriteria.stream()
         .map(cohortBuilderMapper::dbModelToClient)
         .collect(Collectors.toList());
+  }
+
+  private VariantFilterInfoResponse convertToVariantFilterInfoResponse(FieldValueList row) {
+    VariantFilterInfoResponse response =
+        new VariantFilterInfoResponse()
+            .lessThanOrEqualToFiveThousand(0L)
+            .overFiveThousand(0L)
+            .overTenThousand(0L)
+            .overHundredThousand(0L)
+            .overTwoHundredThousand(0L);
+    FieldValues.getLong(row, "count").ifPresent(response::setVidsCount);
+    FieldValues.getLong(row, "participant_count").ifPresent(response::setParticipantCount);
+    FieldValues.getLong(row, "count_1").ifPresent(response::setLessThanOrEqualToFiveThousand);
+    FieldValues.getLong(row, "count_2").ifPresent(response::setOverFiveThousand);
+    FieldValues.getLong(row, "count_3").ifPresent(response::setOverTenThousand);
+    FieldValues.getLong(row, "count_4").ifPresent(response::setOverHundredThousand);
+    FieldValues.getLong(row, "count_5").ifPresent(response::setOverTwoHundredThousand);
+    return response;
   }
 
   private VariantFilterResponse fieldValueListToVariantFilter(FieldValueList row) {
